@@ -1,3 +1,5 @@
 *META.*
+Build.PL
+LICENSE
 MANIFEST
 *.tar.gz
