@@ -1,0 +1,11 @@
+requires 'Mojolicious', '5.00';
+requires 'Digest::SHA';
+requires 'MIME::Base64', '3.11';
+
+recommends 'Crypt::OpenSSL::RSA';
+
+configure_requires 'Module::Build::Tiny';
+
+author_requires 'App::ModuleBuildTiny';
+author_requires 'Module::Metadata', '1.000009';
+
